# otus_homework_13

./: .clang-format  CMakeLists.txt
.github/workflows/: release.yml
examples/data/: testLite.csv
src/app/: CMakeLists.txt  main.cpp
src/test/: CMakeLists.txt
